# clusterp2p

./: CMakeLists.txt
src/: fastset.c  identity.c  identity.h  logger.c  logger.h  shared.c  shared.h  utils.c  utils.h
src/network/: node.c  node.h  node_listener.c  protocol.c  protocol.h  router.h  serialize.c
src/network/protocols/p2pnet/: p2pnet.c  p2pnet.h
src/network/router/: router.c  router_table.h  routing_protocol.h  routing_table.c
test/: send.py
test/sharedMemory/: process.c  shared.c  shared.h
